--- a/tmpl_2019-08.vcxproj.filters
+++ b/tmpl_2019-08.vcxproj.filters
@@ -9,6 +9,7 @@
       <Filter>template code</Filter>
     </ClCompile>
     <ClCompile Include="Bee.cpp" />
+    <ClCompile Include="Flower.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -19,6 +20,7 @@
       <Filter>template code</Filter>
     </ClInclude>
     <ClInclude Include="Bee.h" />
+    <ClInclude Include="flower.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
