made timer and started a rare flower class but i have some issues
 i am experiencing some fatal errors that i do not know how to fix.

--- a/tmpl_2019-08.vcxproj.filters
+++ b/tmpl_2019-08.vcxproj.filters
@@ -10,6 +10,8 @@
     </ClCompile>
     <ClCompile Include="Bee.cpp" />
     <ClCompile Include="Flower.cpp" />
+    <ClCompile Include="RareFlower.cpp" />
+    <ClCompile Include="timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -21,6 +23,8 @@
     </ClInclude>
     <ClInclude Include="Bee.h" />
     <ClInclude Include="flower.h" />
+    <ClInclude Include="RareFlower.h" />
+    <ClInclude Include="timer.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
