--- a/tmpl_2019-08.vcxproj
+++ b/tmpl_2019-08.vcxproj
@@ -225,15 +225,19 @@
     <ClCompile Include="Bee.cpp" />
     <ClCompile Include="Flower.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="RareFlower.cpp" />
     <ClCompile Include="surface.cpp" />
     <ClCompile Include="template.cpp" />
+    <ClCompile Include="timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bee.h" />
     <ClInclude Include="flower.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="RareFlower.h" />
     <ClInclude Include="surface.h" />
     <ClInclude Include="template.h" />
+    <ClInclude Include="timer.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="_readme.txt" />
