managed to set the timer and fix the bug
the mistake i made in the previous commit is that i didn't define the implementation of the timer. also deleted the assets i did not need and added the grass background sprite

--- a/tmpl_2019-08.vcxproj.filters
+++ b/tmpl_2019-08.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClCompile Include="Flower.cpp" />
     <ClCompile Include="RareFlower.cpp" />
     <ClCompile Include="timer.cpp" />
+    <ClCompile Include="screen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -25,6 +26,7 @@
     <ClInclude Include="flower.h" />
     <ClInclude Include="RareFlower.h" />
     <ClInclude Include="timer.h" />
+    <ClInclude Include="screen.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
