--- a/tmpl_2019-08.vcxproj
+++ b/tmpl_2019-08.vcxproj
@@ -225,6 +225,7 @@
     <ClCompile Include="Bee.cpp" />
     <ClCompile Include="Flower.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="surface.cpp" />
     <ClCompile Include="template.cpp" />
     <ClCompile Include="timer.cpp" />
@@ -233,6 +234,7 @@
     <ClInclude Include="Bee.h" />
     <ClInclude Include="flower.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="surface.h" />
     <ClInclude Include="template.h" />
     <ClInclude Include="timer.h" />
