--- a/tmpl_2019-08.vcxproj.filters
+++ b/tmpl_2019-08.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClCompile Include="Bee.cpp" />
     <ClCompile Include="Flower.cpp" />
     <ClCompile Include="timer.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h" />
@@ -23,6 +24,7 @@
     <ClInclude Include="Bee.h" />
     <ClInclude Include="flower.h" />
     <ClInclude Include="timer.h" />
+    <ClInclude Include="MainMenu.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="template code">
